<resources>
    <string name="app_name">DestinationReminderApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_create">Create</string>
    <string name="menu_myalarms">MyAlarms</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_myalarms">My Alarms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="Myalarms">Myalarms</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>>
    <string name="Create">create</string>
    <string name="PrivacyandPolicy">Privacy and Policy</string>
    <string name="Settings">Settings</string>
    <string name="zipline">Zipline</string>
    <string name="metro">Metro</string>
    <string name="train">Train</string>
    <string name="title_fragment_map">fragment_map</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_recycleritem">RecyclerItem</string>
    <string name="picker">picker</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_update">update</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Services We Offer |Website| Mobile Application| Web portal| Dedicated Development Center| E-commerce| ERP | CRM </string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">Be the first to ask a question</string>
    <string name="url_faq">http://www.dynamicvishva.in/Company%20Profile%20DV-1.pdf</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.dynamicvishva.in/Company%20Profile%20DV-1.pdf</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.dynamicvishva.in/Company%20Profile%20DV-1.pdf</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="menu_settings" />
    <string name="title_activity_setting">settingActivity</string>

</resources>
