<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.navigationdrawer.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">
    </fragment>

    <fragment
        android:id="@+id/nav_create"
        android:name="com.example.navigationdrawer.CreateActivity"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_myalarms"
        android:name="com.example.navigationdrawer.ui.myalarms.MyalarmsFragment"
        android:label="@string/menu_myalarms"
        tools:layout="@layout/fragment_myalarms" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.navigationdrawer.ui.myalarms.MyalarmsFragment"
        android:label="@string/menu_myalarms"
        tools:layout="@layout/fragment_setting" />

</navigation>